k8s/gateway/micro-mart-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: micro-mart-gateway
  namespace: micro-mart-local
spec:
  gatewayClassName: eg
  listeners:
    - protocol: HTTP
      port: 80
      name: micro-mart-gateway
      allowedRoutes:
        namespaces:
          from: Same
