k8s/gateway/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
  rules:
    - backendRefs:
        - name: grafana
          port: 80
