k8s/gateway/micro-mart-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: micro-mart-http-route
  namespace: micro-mart-local
spec:
  parentRefs:
    - name: micro-mart-gateway
  rules:
    - backendRefs:
        - name: api-gateway
          port: 8000
